alb-test/affinity-pod-to-host-preferred.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod-affinity
  labels:
    app: pod-affinity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-affinity
  template:
    metadata:
      labels:
        app: pod-affinity
    spec:
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values: 
                  - pod-affinity 
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: pod-affinity
        image: nginxdemos/hello:plain-text
        resources:
          requests:
            memory: "512Mi"
            cpu: "200m"
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent
