alb-test/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: general-pods
  labels:
    app: general-pods
spec:
  replicas: 1
  selector:
    matchLabels:
      app: general-pods
  template:
    metadata:
      labels:
        app: general-pods
    spec:
      containers:
      - name: general-pods
        image: nginxdemos/hello:plain-text
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent
