alb-test/ip-target-custom-label-different-value.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ip-target-2
  labels:
    app: ip-target-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ip-target-2
  template:
    metadata:
      labels:
        app: ip-target-2
    spec:
      nodeSelector:
        karpenter.sh/capacity-type: spot
        capacity-spread: "ip-target-2"
      containers:
      - name: ip-target-2
        image: nginxdemos/hello:plain-text
        resources:
          requests:
            memory: "512Mi"
            cpu: "200m"
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent
