alb-test/pod-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-pvc
spec:
  volumes:
    - name: storage
      persistentVolumeClaim:
        claimName: ebs-claim
  containers:
  - name: general-pods
    image: 592446325190.dkr.ecr.ap-northeast-2.amazonaws.com/nginxdemos
    resources:
      requests:
        memory: "512Mi"
        cpu: "200m"
    ports:
    - name: http
      containerPort: 80
    imagePullPolicy: IfNotPresent
