alb-test/tolerations.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tolerations
  labels:
    app: tolerations
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tolerations
  template:
    metadata:
      labels:
        app: tolerations
    spec:
      tolerations:
      - key: "leejungh"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: tolerations
        image: nginxdemos/hello:plain-text
        resources:
          requests:
            memory: "512Mi"
            cpu: "200m"
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent
