alb-test/topoloy-spread-custom.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-custom
  labels:
    app: ts-custom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ts-custom
  template:
    metadata:
      labels:
        app: ts-custom
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "capacity-spread"
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: ts-custom
      containers:
      - name: ts-custom
        image: nginxdemos/hello:plain-text
        resources:
          requests:
            memory: "512Mi"
            cpu: "200m"
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent
