alb-test/topoloy-spread-host.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-home
  labels:
    app: ts-home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ts-home
  template:
    metadata:
      labels:
        app: ts-home
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "kubernetes.io/hostname"
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: ts-home
      containers:
      - name: ts-home
        image: nginxdemos/hello:plain-text
        resources:
          requests:
            memory: "512Mi"
            cpu: "200m"
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent
