alb-test/topoloy-spread-zone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ts-zone
  labels:
    app: ts-zone
spec:
  replicas: 50
  selector:
    matchLabels:
      app: ts-zone
  template:
    metadata:
      labels:
        app: ts-zone
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: "topology.kubernetes.io/zone"
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: ts-zone
      containers:
      - name: ts-zone
        image: nginxdemos/hello:plain-text
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent
