alb-test/alb-nginxdemo-target-instance-targetgroupbinding.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxdemo-hello2
  labels:
    app: nginxdemo-hello2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginxdemo-hello2
  template:
    metadata:
      labels:
        app: nginxdemo-hello2
    spec:
      containers:
      - name: nginxdemo-hello2
        image: nginxdemos/hello:plain-text
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: nginxdemo-hello2
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: nginxdemo-hello2
