alb-test/nlb-ngxdemo-instance-local.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nlb-instance-local
  labels:
    app: nlb-instance-local
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nlb-instance-local
  template:
    metadata:
      labels:
        app: nlb-instance-local
    spec:
      containers:
      - name: nlb-instance-local
        image: nginxdemos/hello:plain-text
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: nlb-instance-local
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: instance
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "https"

spec:
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 80
  type: LoadBalancer
  selector:
    app: nlb-instance-local
