alb-test/alb-group-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxdemo-hello
  labels:
    app: nginxdemo-hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginxdemo-hello
  template:
    metadata:
      labels:
        app: nginxdemo-hello
    spec:
      containers:
      - name: nginxdemo-hello
        image: nginxdemos/hello:plain-text
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxdemo-hello2
  labels:
    app: nginxdemo-hello2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginxdemo-hello2
  template:
    metadata:
      labels:
        app: nginxdemo-hello2
    spec:
      containers:
      - name: nginxdemo-hello
        image: nginxdemos/hello:plain-text
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: nginxdemo-hello2
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: nginxdemo-hello2
---
apiVersion: v1
kind: Service
metadata:
  name: nginxdemo-hello
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: nginxdemo-hello
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginxdemo2
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: test
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginxdemo-hello2
              port:
                number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginxdemo
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: test
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginxdemo-hello
              port:
                number: 80
