alb-test/alb-nginxdemo-target-instance-temp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxdemo
  labels:
    app: nginxdemo
spec:
  replicas: 10
  selector:
    matchLabels:
      app: nginxdemo
  template:
    metadata:
      labels:
        app: nginxdemo
    spec:
      containers:
      - name: nginxdemo
        image: nginxdemos/hello:plain-text
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: nginxdemo
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginxdemo
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginxdemo
              port:
                number: 80
