alb-test/ip-target-tolerance-10s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ip-target
  labels:
    app: ip-target
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ip-target
  template:
    metadata:
      labels:
        app: ip-target
    spec:
      tolerations:
      - key: "node.kubernetes.io/unreachable"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 10
      - key: "node.kubernetes.io/not-ready"
        operator: "Exists"
        effect: "NoExecute"
        tolerationSeconds: 10
      containers:
      - name: ip-target
        image: 592446325190.dkr.ecr.ap-northeast-2.amazonaws.com/nginxdemos
        resources:
          requests:
            memory: "1024Mi"
            cpu: "100m"
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: ip-target
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: ip-target
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ip-target
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: ip-target
              port:
                number: 80
