alb-test/local-instance-target.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: even-host
  labels:
    app: even-host
spec:
  replicas: 10
  selector:
    matchLabels:
      app: even-host
  template:
    metadata:
      labels:
        app: even-host
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: even-host
      containers:
      - name: even-host
        image: nginxdemos/hello:plain-text
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - name: http
          containerPort: 80
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: even-host
spec:
  externalTrafficPolicy: Local
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: even-host
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: even-host
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: even-host
              port:
                number: 80
